[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/backgrounds/background_5.png" type="Texture" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://save/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://debug/EnemyPath.gd" type="Script" id=4]
[ext_resource path="res://levels/Level.gd" type="Script" id=5]
[ext_resource path="res://save/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://physics/StardustSpawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sounds/music/level_theme.wav" type="AudioStream" id=8]
[ext_resource path="res://levels/BossFollow.gd" type="Script" id=9]
[ext_resource path="res://enemies/bosses/Guardian.tscn" type="PackedScene" id=10]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 160, 51, 0, 0, 0, 0, 88, 46, 0, 0, 0, 0, 33, 55, 0, 0, 0, 0, 20, 94, 0, 0, 0, 0, 161, 52, 0, 0, 0, 0, 227, 47, 0, 0, 0, 0, 289, 54, 0, 0, 0, 0, 300, 94, 0, 0, 0, 0, 161, 52 )
}

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -12, 143, 0, 0, 0, 0, 17, 146, 0, 0, 0, 0, 60, 145, 0, 0, 0, 0, 95, 130, 0, 0, 0, 0, 109, 118, 0, 0, 0, 0, 95, 92 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 342, 47, 0, 0, 0, 0, 297, 47, 0, 0, 0, 0, 244, 47, 0, 0, 0, 0, 214, 51, 0, 0, 0, 0, 198, 70, 0, 0, 0, 0, 198, 91, 0, 0, 0, 0, 211, 114 )
}

[node name="Level6_4" type="Node2D"]
script = ExtResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -6.0
autoplay = true

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="StardustSpawner" parent="." instance=ExtResource( 7 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Enemies" type="Node2D" parent="."]

[node name="BossPath" type="Path2D" parent="Enemies"]
curve = SubResource( 3 )

[node name="BossFollow" type="PathFollow2D" parent="Enemies/BossPath"]
position = Vector2( 160, 51 )
rotation = 1.5708
rotate = false
script = ExtResource( 9 )

[node name="Guardian" parent="Enemies/BossPath/BossFollow" instance=ExtResource( 10 )]
rotation = -1.5708

[node name="EnemyPath1" type="Path2D" parent="Enemies"]
curve = SubResource( 1 )
script = ExtResource( 4 )
enemyLimit = 8
tier = 4

[node name="EnemyPath2" type="Path2D" parent="Enemies"]
curve = SubResource( 2 )
script = ExtResource( 4 )
enemyLimit = 8
tier = 4

[node name="StartLabel" type="Label" parent="."]
margin_left = 127.0
margin_top = 90.0
margin_right = 197.0
margin_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
text = "Get Ready!"

[node name="EndLabel" type="Label" parent="."]
visible = false
margin_left = 110.0
margin_top = 90.0
margin_right = 214.0
margin_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
text = "Level Complete!"

[node name="OnTop" type="CanvasLayer" parent="."]
layer = 50

[node name="UI" parent="OnTop" instance=ExtResource( 3 )]

[node name="PauseMenu" parent="OnTop" instance=ExtResource( 6 )]
visible = false
